Fix text-overflow

--- a/src/css/themes/default.css
+++ b/src/css/themes/default.css
@@ -140,7 +140,7 @@ html, body, article, div {
   font-size: 48px;
   font-size: 2.4vw;
 }
-.gs-theme h2, .gs-theme h3, .gs-theme p, .gs-theme ul, .gs-theme ol, .gs-theme li, .gs-theme pre {
+.gs-theme h2, .gs-theme h3, .gs-theme p, .gs-theme ul, .gs-theme ol, .gs-theme li {
   margin-bottom: 0.5em;
   line-height: normal;
   -ms-word-break: break-all;
@@ -162,6 +162,18 @@ html, body, article, div {
   list-style: decimal;
 }
 .gs-theme pre {
+  margin-bottom: 0.5em;
+  line-height: normal;
+  white-space: -moz-pre-wrap;
+  /* Mozilla, supported since 1999 */
+  white-space: -pre-wrap;
+  /* Opera */
+  white-space: -o-pre-wrap;
+  /* Opera */
+  white-space: pre-wrap;
+  /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+  word-wrap: break-word;
+  /* IE 5.5+ */
   font-size: 32px;
   font-size: 2vw;
 }
@@ -197,6 +209,16 @@ html, body, article, div {
   padding: 0.5em 1em;
   border: 1px solid #ddd;
   background-color: #f8f8f8;
+  white-space: -moz-pre-wrap;
+  /* Mozilla, supported since 1999 */
+  white-space: -pre-wrap;
+  /* Opera */
+  white-space: -o-pre-wrap;
+  /* Opera */
+  white-space: pre-wrap;
+  /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+  word-wrap: break-word;
+  /* IE 5.5+ */
 }
 .gs-theme blockquote {
   border-left: 10px solid #DDD;
