--- a/src/sass/base/_slide.scss
+++ b/src/sass/base/_slide.scss
@@ -29,7 +29,7 @@ html,body,article,div {
   h3 {
     @include font-size(2.4,48);
   }
-  h2,h3,p,ul,ol,li,pre {
+  h2,h3,p,ul,ol,li {
     margin-bottom: 0.5em;    
     line-height: normal;
     @include wrap;
@@ -45,6 +45,9 @@ html,body,article,div {
     list-style: decimal;
   }
   pre {
+    margin-bottom: 0.5em;    
+    line-height: normal;
+    @include pre-wrap;
     @include font-size(2.0,32);
   }
   img {
